src/test/deca/syntax/invalid/self/invalid-token.deca
// Description:
//    tests de programme incorrect lexicalement
//
// Resultats:
//    erreur à la ligne 11 : token non reconnu
//
//
// Historique:
//    cree le 06/01/2022

{ 1.}